login funcional y detalles mas

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                 <div class="option-logo">
                     <img src="imagenes/sosteniendo-la-llave-con-la-mano.png" alt="Propietario">
                 </div>
-                <button class="option-button">Soy Propietario</button>
+                <a href="/pages/login.html" class="option-button">Soy Propietario</a>
             </div>
             <div class="option" id="inquilino">
                 <div class="option-logo">
                     <img src="imagenes/alquilar.png" alt="Inquilino">
                 </div>
-                <button class="option-button">Soy Inquilino</button>
+                <a href="/pages/login.html" class="option-button">Soy Inquilino</a>
             </div>
             <div class="option" id="invitado">
                 <div class="option-logo">
                     <img src="imagenes/visita.png" alt="Invitado">
                 </div>
-                <button class="option-button">Soy Invitado</button>
+                <a href="/pages/cuarto.html" class="option-button">Soy Invitado</a>
             </div>
         </div>
     </div>
