--- a/pages/cuarto.html
+++ b/pages/cuarto.html
@@ -1,3 +1,4 @@
+<!-- cuarto.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,13 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuartos Disponibles</title>
     <link rel="stylesheet" href="../css/cuarto.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Cuartos Disponibles</h1>
-        <div id="cuartos-container" class="cuartos-grid">
-        </div>
+    <div class="dashboard-container">
+        <!-- Header -->
+        <header class="content-header">
+            <div class="header-left">
+                <button class="btn-back" onclick="window.location.href='../index.html'">
+                    <i class="fas fa-home"></i> Volver al Home
+                </button>
+            </div>
+            <h1>Cuartos Disponibles</h1>
+            <div class="header-right">
+                <div class="stats-badge">
+                    <i class="fas fa-door-closed"></i>
+                    <span id="total-cuartos">0</span> cuartos
+                </div>
+            </div>
+        </header>
+
+        <!-- Main Content -->
+        <main class="main-content">
+            <!-- Filtros -->
+            <div class="filters-section">
+                <div class="search-box">
+                    <i class="fas fa-search"></i>
+                    <input type="text" id="search-input" placeholder="Buscar cuartos...">
+                </div>
+                <div class="filter-options">
+                    <select id="filter-status">
+                        <option value="">Todos los estados</option>
+                        <option value="Disponible">Disponible</option>
+                        <option value="Ocupado">Ocupado</option>
+                        <option value="Mantenimiento">Mantenimiento</option>
+                    </select>
+                </div>
+            </div>
+
+            <!-- Cuartos Grid -->
+            <div class="cuartos-grid" id="cuartos-container">
+                <!-- Los cuartos se cargarán aquí -->
+            </div>
+
+            <!-- Estado de carga -->
+            <div id="loading-state" class="loading-state">
+                <div class="spinner"></div>
+                <p>Cargando cuartos...</p>
+            </div>
+
+            <!-- Estado vacío -->
+            <div id="empty-state" class="empty-state" style="display: none;">
+                <i class="fas fa-door-closed"></i>
+                <h3>No hay cuartos disponibles</h3>
+                <p>No se encontraron cuartos para mostrar.</p>
+            </div>
+
+            <!-- Estado de error -->
+            <div id="error-state" class="error-state" style="display: none;">
+                <i class="fas fa-exclamation-triangle"></i>
+                <h3>Error al cargar los cuartos</h3>
+                <p id="error-message">Verifica que la API esté funcionando.</p>
+                <button class="btn-retry" onclick="cargarCuartos()">Reintentar</button>
+            </div>
+        </main>
     </div>
+
     <script src="../js/cuartos.js"></script>
 </body>
 </html>
