--- a/pages/pagos.html
+++ b/pages/pagos.html
@@ -12,16 +12,13 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h2><i class="fas fa-home"></i> Sistema de Alquiler</h2>
+                <h2><i class="fas fa-home"></i> Na-Ech</h2>
             </div>
             <nav class="sidebar-nav">
                 <ul>
-                    <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-                    <li><a href="contratos.html"><i class="fas fa-file-contract"></i> Contratos</a></li>
-                    <li><a href="inquilinos.html"><i class="fas fa-users"></i> Inquilinos</a></li>
-                     <li><a href="cuartos-muebles.html"><i class="fas fa-door-closed"></i> Cuartos y Muebles</a></li>
                     <li class="active"><a href="pagos.html"><i class="fas fa-money-bill-wave"></i> Pagos</a></li>
-                    <li><a href="#"><i class="fas fa-cog"></i> Configuración</a></li>
+                    <li><a href="reportes.html"><i class="fas fa-chart-bar"></i> Reportes</a></li>
+                    <li><a href="perfil.html"><i class="fas fa-user"></i> Perfil</a></li>
                 </ul>
             </nav>
         </aside>
