vista inquilinos lista

--- a/pages/cuartos-muebles.html
+++ b/pages/cuartos-muebles.html
@@ -20,8 +20,7 @@
                     <li><a href="contratos.html"><i class="fas fa-file-contract"></i> Contratos</a></li>
                     <li><a href="inquilinos.html"><i class="fas fa-users"></i> Inquilinos</a></li>
                     <li class="active"><a href="cuartos-muebles.html"><i class="fas fa-door-closed"></i> Cuartos y Muebles</a></li>
-                    <li><a href="pagos.html"><i class="fas fa-money-bill-wave"></i> Pagos</a></li>
-                    <li><a href="#"><i class="fas fa-cog"></i> Configuración</a></li>
+                    <li><a href="login.html"><i class="fas fa-sign-out-alt"></i> Salir</a></li>
                 </ul>
             </nav>
         </aside>
