--- a/pages/bitacora.html
+++ b/pages/bitacora.html
@@ -21,7 +21,9 @@
                     <li><a href="contratos.html"><i class="fas fa-file-contract"></i> Contratos</a></li>
                     <li><a href="inquilinos.html"><i class="fas fa-users"></i> Inquilinos</a></li>
                     <li><a href="cuartos-muebles.html"><i class="fas fa-door-closed"></i> Cuartos y Muebles</a></li>
-                    <li class="active"><a href="bitacora.html"><i class="fas fa-clipboard-list"></i> Bitácora</a></li>
+                    <li><a href="mantenimiento.html"><i class="fas fa-tools"></i> Mantenimiento</a></li>
+                    <li class="active"><a href="bitacora.html"><i class="fas fa-clipboard-list"></i> Bitácora</a></li>          
+                    <li><a href="notificaciones.html"><i class="fas fa-bell"></i> Notificaciones</a></li>
                     <li><a href="login.html"><i class="fas fa-sign-out-alt"></i> Salir</a></li>
                 </ul>
             </nav>
