landing pages lista en español

--- a/pages/cuarto.html
+++ b/pages/cuarto.html
@@ -13,7 +13,7 @@
         <!-- Header -->
         <header class="content-header">
             <div class="header-left">
-                <button class="btn-back" onclick="window.location.href='../index.html'">
+                <button class="btn-back" onclick="window.location.href='../pages/home.html'">
                     <i class="fas fa-home"></i> Volver al Home
                 </button>
             </div>
