--- a/pages/login.html
+++ b/pages/login.html
@@ -38,6 +38,11 @@
                 <button type="submit" class="login-btn" id="loginBtn">
                     Entrar
                 </button>
+                
+                <!-- Botón para ir a home.html -->
+                <button type="button" class="home-btn" onclick="window.location.href='/pages/home.html'">
+                    Ir a Home
+                </button>
             </form>
         </div>
     </div>
