errores de botones y logica

--- a/pages/pagos.html
+++ b/pages/pagos.html
@@ -78,9 +78,6 @@
                     <h2>Lista de Pagos</h2>
                     <div class="table-actions">
                         <input type="text" id="searchInput" placeholder="Buscar pago..." class="search-input">
-                        <button class="btn-secondary" id="btnExportar">
-                            <i class="fas fa-download"></i> Exportar
-                        </button>
                     </div>
                 </div>
                 <div class="table-container">
@@ -109,7 +106,7 @@
     <div id="modalPago" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 id="modalTitle">Nuevo Pago</h2>
+                <h2>Nuevo Pago</h2>
                 <span class="close">&times;</span>
             </div>
             <form id="pagoForm">
