--- a/pages/inquilinos.html
+++ b/pages/inquilinos.html
@@ -146,9 +146,8 @@
                         <input type="text" id="nombreInquilino" name="nombreInquilino" required maxlength="100" placeholder="Ingrese el nombre completo">
                     </div>
                     <div class="form-group">
-                        <label for="telefonoInquilino">Teléfono</label>
-                        <input type="tel" id="telefonoInquilino" name="telefonoInquilino" maxlength="20" placeholder="Ingrese el teléfono">
-                    </div>
+                           <label for="telefonoInquilino">Teléfono *</label>
+    <input type="tel" id="telefonoInquilino" name="telefonoInquilino" maxlength="20" placeholder="Ingrese el teléfono" required>  </div>
                     <div class="form-group">
                         <label for="email">Email *</label>
                         <input type="email" id="email" name="email" required maxlength="100" placeholder="Ingrese el email">
