--- a/pages/login.html
+++ b/pages/login.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Na-Ech - Iniciar Sesión</title>
     <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <!-- Alertas personalizadas -->
+    <div id="alertContainer" class="alert-container"></div>
+
     <div class="logo-container">
         <div class="logo">Na-Ech</div>
     </div>
