busqueda por muebles lista

--- a/pages/cuarto.html
+++ b/pages/cuarto.html
@@ -32,7 +32,7 @@
             <div class="filters-section">
                 <div class="search-box">
                     <i class="fas fa-search"></i>
-                    <input type="text" id="search-input" placeholder="Buscar cuartos...">
+                    <input type="text" id="search-input" placeholder="Buscar cuartos o muebles...">
                 </div>
                 <div class="filter-options">
                     <select id="filter-status">
